2004-04-19  MenTaLguY <mental@rydia.net>

    * src/arc-context.cpp, src/desktop-handles.h, src/desktop.h,
	  src/draw-context.cpp, src/draw-context.h, src/forward.h,
	  src/inkscape-private.h, src/inkscape.cpp, src/node-context.cpp,
	  src/node-context.h, src/rect-context.cpp, src/selection-chemistry.cpp,
	  src/selection-chemistry.h, src/selection.cpp, src/selection.h,
	  src/seltrans.h, src/spiral-context.cpp, src/star-context.cpp,
	  src/star-context.h, src/text-context.cpp, src/dialogs/xml-tree.cpp,
	  src/widgets/sp-widget.h:

	  finished GObject removal from SPSelection

    * src/arc-context.h, src/arc-context.cpp, src/desktop.cpp, src/desktop.h,
	  src/draw-context.cpp, src/draw-context.h, src/node-context.cpp,
	  src/node-context.h, src/rect-context.cpp, src/rect-context.h,
	  src/selection.cpp, src/selection.h, src/seltrans.cpp, src/seltrans.h,
	  src/spiral-context.cpp, src/spiral-context.h, src/text-context.cpp,
	  src/text-context.h, src/toolbox.cpp:

	  migrated SPSelection to SigC++ signals (though it's a bit messy
	  right now)

2004-04-19  Peter  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/stroke-style.cpp: Cleanups: greater conformance to
	CodingStyle.  Moved some declarations to their first use.

2004-04-19  Carl Hetherington <inkscape@carlh.net>

	* src/dialogs/stroke-style.cpp, libnr/nr-rect-l.cpp:
	Fix a couple of compiler warnings.

	* src/dialogs/filedialog-win32.cpp: add OFN_NOCHANGEDIR to Win32
	flags in OPENFILENAME structs.  This prevents the open / save
	boxes from changing the current directory.  Any change to the
	current directory causes problems for subsequent attempts to
	load icons from pixmaps.  Also, fix a bug whereby the save
	dialogue would sometimes not open due to being passed a filename
	it didn't like.

2004-04-19  bulia byak <bulia@users.sourceforge.net>

	* shortcuts.cpp selection-chemistry.cpp selection-chemistry.h verbs.cpp verbs.h
	interface.cpp: Clone command (Edit menu, Shift+Ctrl+N)
